fixed background colour on mobile view

--- a/patternlibrarycopy/css/master.css
+++ b/patternlibrarycopy/css/master.css
@@ -905,7 +905,7 @@ footer .dark-logo a {
     padding: 0;
 
     grid-column: 2 / 8;
-    background-color: yellow;
+    /*background-color: yellow;*/
   }
 
 
